--- a/accounts-service/src/main/resources/db/changelog/db.changelog-accounts.yaml
+++ b/accounts-service/src/main/resources/db/changelog/db.changelog-accounts.yaml
@@ -1,23 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<databaseChangeLog
-        xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="
-          http://www.liquibase.org/xml/ns/dbchangelog
-          http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.8.xsd">
-
-    <changeSet id="1" author="maksim">
-        <createTable tableName="accounts">
-            <column name="id" type="bigint" autoIncrement="true">
-                <constraints primaryKey="true" nullable="false"/>
-            </column>
-            <column name="owner" type="varchar(255)">
-                <constraints nullable="false"/>
-            </column>
-            <column name="balance" type="decimal(19,2)">
-                <constraints nullable="false"/>
-            </column>
-        </createTable>
-    </changeSet>
-
-</databaseChangeLog>
+databaseChangeLog:
+  - changeSet:
+      id: 1
+      author: maksim
+      changes:
+        - createTable:
+            tableName: accounts
+            columns:
+              - column:
+                  name: id
+                  type: bigint
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: owner
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: balance
+                  type: decimal(19,2)
+                  constraints:
+                    nullable: false
