--- a/accounts-service/src/main/resources/application.yml
+++ b/accounts-service/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
     properties:
       hibernate.default_schema: accounts_service
 
-liquibase:
-  change-log: classpath:db/changelog/db.changelog-master.yaml
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+    drop-first: true
+    clear-checksums: true
+    default-schema: accounts_service     # схема для таблиц приложения
+    liquibase-schema: accounts_service   # схема для служебных таблиц Liquibase
