--- a/accounts-service/src/main/resources/db/changelog/db.changelog-accounts.yaml
+++ b/accounts-service/src/main/resources/db/changelog/db.changelog-accounts.yaml
@@ -4,6 +4,42 @@ databaseChangeLog:
       author: maksim
       changes:
         - createTable:
+            tableName: users
+            columns:
+              - column:
+                  name: id
+                  type: bigint
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: login
+                  type: varchar(50)
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: password
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: name
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: birthdate
+                  type: date
+                  constraints:
+                    nullable: false
+
+  - changeSet:
+      id: 2
+      author: maksim
+      changes:
+        - createTable:
             tableName: accounts
             columns:
               - column:
@@ -14,8 +50,8 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: owner
-                  type: varchar(255)
+                  name: owner_id
+                  type: bigint
                   constraints:
                     nullable: false
               - column:
@@ -23,3 +59,9 @@ databaseChangeLog:
                   type: decimal(19,2)
                   constraints:
                     nullable: false
+        - addForeignKeyConstraint:
+            baseTableName: accounts
+            baseColumnNames: owner_id
+            referencedTableName: users
+            referencedColumnNames: id
+            constraintName: fk_accounts_users
