Update service configs, Dockerfiles, and docker-compose for all services

--- a/accounts-service/Dockerfile
+++ b/accounts-service/Dockerfile
@@ -8,15 +8,13 @@ WORKDIR /app
 # Устанавливаем Maven и bash
 RUN apk add --no-cache maven bash git
 
-# Копируем POM файлы
+# Копируем только POM и исходники модуля
 COPY pom.xml .
 COPY accounts-service/pom.xml accounts-service/pom.xml
+COPY accounts-service/src accounts-service/src
 
-# Копируем исходники
-COPY . .
-
-# Сборка JAR без запуска тестов
-RUN mvn clean package -DskipTests
+# Сборка JAR без тестов
+RUN mvn clean package -DskipTests -f accounts-service/pom.xml
 
 # ------------------------------
 # Stage 2: Run JAR
@@ -25,11 +23,10 @@ FROM eclipse-temurin:21-jre-alpine
 
 WORKDIR /app
 
-# Копируем собранный JAR из первого этапа
+# Копируем собранный JAR
 COPY --from=build /app/accounts-service/target/accounts-service-1.0-SNAPSHOT.jar app.jar
 
-# Открываем порт сервиса
+# Порт сервиса
 EXPOSE 8081
 
-# Запуск сервиса
 ENTRYPOINT ["java","-jar","app.jar"]
