--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,16 +1,39 @@
+server:
+  port: 8082
+
 spring:
   application:
     name: gateway
+
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
+      routes:
+        - id: accounts-service
+          uri: lb://ACCOUNTS-SERVICE
+          predicates:
+            - Path=/accounts-service/**
+        - id: front-ui
+          uri: lb://FRONT-UI
+          predicates:
+            - Path=/front-ui/**
+        - id: cash-service
+          uri: lb://CASH-SERVICE
+          predicates:
+            - Path=/cash-service/**
+        - id: transfer-service
+          uri: lb://TRANSFER-SERVICE
+          predicates:
+            - Path=/transfer-service/**
+        - id: exchange-service
+          uri: lb://EXCHANGE-SERVICE
+          predicates:
+            - Path=/exchange-service/**
+      default-filters:
+        - StripPrefix=1
 
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-server:8761/eureka/}
+      defaultZone: http://discovery-server:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
